# Shopping

./: .gitignore  README.md  docker-compose.yaml
UI/: .env.development  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json
UI/src/: main.tsx
UI/src/components/: App.tsx  Icon.tsx  (+5 more)
api/: .env.example  .env.test  .gitignore  Dockerfile  alembic.ini  docker-run.sh  pyproject.toml  redis-install.sh  requirements.txt  run.sh
api/alembic/: env.py
api/alembic/versions/: 04ef5f113763_init.py  138f1de6babf_test.py  ce51571db279_notifications_table_create.py  d3c13f54c839_init.py  e568604be428_userid_to_str.py
api/shoppingAPI/: app.py  app_types.py  config.py  exceptions.py  validation_models.py
api/shoppingAPI/auth/: __init__.py  auth.py  utils.py  validation_models.py
api/shoppingAPI/crud/: list_item.py
api/shoppingAPI/database/: __init__.py  db.py
api/shoppingAPI/tests/: test_auth.py
api/shoppingAPI/utils/: load_categories.py  products.csv  utils.py
api/src/: __init__.py  app.py  config.py  validation_models.py
api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/src/auth/: auth.py
api/src/crud/: list.py  list_item.py  notifications.py
api/src/database/: __init__.py  db.py
api/src/tests/: conftest.py  test_auth.py  test_endpoints.py
api/src/tests/endpoints/: test_api_delete.py  test_api_list_id.py  test_api_list_items.py  test_api_lists.py  test_api_lists_share.py  test_notifications.py
api/src/utils/: load_categories.py  products.csv  utils.py
nextui/: .gitignore  Dockerfile  middleware.ts  next-auth.d.ts  package-lock.json  package.json
nextui/actions/: actions.ts
nextui/app/: error.tsx  layout.tsx  page.tsx
nextui/assets/: allowedUsers.example.json
nextui/lib/: apiClient.ts  auth-options.ts  utils.ts
nextui/types/: api.ts  apiTypes.ts  list.ts
(+35 files in other folders)
