[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["logos201 <logos201@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
